Android 2 is working great with HttpUrlConnection