@@ -23,7 +23,12 @@ import org.apache.http.impl.client.DefaultHttpClient;
 import org.apache.http.message.BasicNameValuePair;
 import org.apache.http.util.EntityUtils;
 
+import java.io.DataOutputStream;
+import java.io.IOException;
+import java.io.InputStream;
+import java.net.HttpURLConnection;
 import java.net.URI;
+import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
@@ -56,7 +61,7 @@ public class SigninActivity extends Activity {
             @Override
             public void onClick(View v) {
                 loading(true);
-                new SigninAsyncTask(v.getContext()).execute();
+                new SigninAsyncTask(v.getContext()).execute(username.getText().toString(), pwd.getText().toString());
             }
         });
         findViewById(R.id.signin_register).setOnClickListener(new View.OnClickListener() {
@@ -82,7 +87,7 @@ public class SigninActivity extends Activity {
     /**
      * AsyncTask for sign-in
      */
-    protected class SigninAsyncTask extends AsyncTask<Void, Void, String>{
+    protected class SigninAsyncTask extends AsyncTask<String, Void, String>{
 
         Context context;
 
@@ -91,44 +96,60 @@ public class SigninActivity extends Activity {
         }
 
         @Override
-        protected String doInBackground(Void... params) {
+        protected String doInBackground(String... params) {
             if(!NetworkHelper.isInternetAvailable(context)){
                 return null;
             }
 
+            // Un stream pour récevoir la réponse
+            InputStream inputStream = null;
+
             try {
-                //then create an httpClient.
-                HttpClient client = new DefaultHttpClient();
-                HttpPost request = new HttpPost();
-                request.setURI(URI.create(context.getString(R.string.url_signin)));
+                URL url = new URL(context.getString(R.string.url_signin));
+                Log.d("Calling URL", url.toString());
+                HttpURLConnection conn = (HttpURLConnection) url.openConnection();
 
-                List<NameValuePair> pairs = new ArrayList<NameValuePair>();
-                pairs.add(new BasicNameValuePair("username", username.getText().toString()));
-                pairs.add(new BasicNameValuePair("pwd", pwd.getText().toString()));
-                //set entity
-                request.setEntity(new UrlEncodedFormEntity(pairs));
+                String urlParameters = "username="+params[0]+"&pwd="+params[1];
 
-                // do request.
-                HttpResponse httpResponse = client.execute(request);
-                String response = null;
 
-                //Store response
-                if (httpResponse.getEntity() != null) {
-                    response = EntityUtils.toString(httpResponse.getEntity());
+                conn.setReadTimeout(10000 /* milliseconds */);
+                conn.setConnectTimeout(15000 /* milliseconds */);
+                conn.setRequestMethod("POST");
+                conn.setDoInput(true);
+                conn.setDoOutput(true);
+                // Starts the query
+                // Send post request
+                conn.setDoOutput(true);
+                DataOutputStream wr = new DataOutputStream(conn.getOutputStream());
+                wr.writeBytes(urlParameters);
+                wr.flush();
+                wr.close();
+
+                int response = conn.getResponseCode();
+                Log.d("NetworkHelper", "The response code is: " + response);
+
+                inputStream = conn.getInputStream();
+                String contentAsString = null;
+                if(response == 200) {
+                    // Convert the InputStream into a string
+                    contentAsString = NetworkHelper.readIt(inputStream);
+                    return JsonParser.getToken(contentAsString);
                 }
+                return contentAsString;
 
-                Log.d(Constants.TAG, "received for url: " + request.getURI() + " return code: " + httpResponse
-                        .getStatusLine()
-                        .getStatusCode());
-                if(httpResponse
-                        .getStatusLine()
-                        .getStatusCode() == 200) {
-                    return JsonParser.getToken(response);
+                // Makes sure that the InputStream is closed after the app is
+                // finished using it.
+            } catch (Exception e) {
+                Log.e("NetworkHelper", e.getMessage());
+                return null;
+            } finally {
+                if (inputStream != null) {
+                    try {
+                        inputStream.close();
+                    } catch (IOException e) {
+                        Log.e("NetworkHelper", e.getMessage());
+                    }
                 }
-                return null;
-            } catch (Exception e){
-                Log.d(Constants.TAG, "Error occured in your AsyncTask : ", e);
-                return null;
             }
         }
 
@@ -144,7 +165,6 @@ public class SigninActivity extends Activity {
 
                     @Override
                     public void onClick(View v) {
-
                     }
                 }).show();
             }
