@@ -21,10 +21,16 @@ import org.apache.http.impl.client.DefaultHttpClient;
 import org.apache.http.message.BasicNameValuePair;
 import org.apache.http.util.EntityUtils;
 
+import java.io.DataOutputStream;
+import java.io.IOException;
+import java.io.InputStream;
+import java.net.HttpURLConnection;
 import java.net.URI;
+import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
 
+import cesi.com.tchatapp.helper.JsonParser;
 import cesi.com.tchatapp.helper.NetworkHelper;
 import cesi.com.tchatapp.utils.Constants;
 
@@ -51,7 +57,7 @@ public class SignupActivity extends Activity {
             @Override
             public void onClick(View v) {
                 loading(true);
-                new SignupAsyncTask(v.getContext()).execute();
+                new SignupAsyncTask(v.getContext()).execute(username.getText().toString(), pwd.getText().toString());
             }
         });
     }
@@ -69,7 +75,7 @@ public class SignupActivity extends Activity {
     /**
      * AsyncTask for sign-in
      */
-    protected class SignupAsyncTask extends AsyncTask<Void, Void, String> {
+    protected class SignupAsyncTask extends AsyncTask<String, Void, Integer> {
 
         Context context;
 
@@ -78,49 +84,58 @@ public class SignupActivity extends Activity {
         }
 
         @Override
-        protected String doInBackground(Void... params) {
+        protected Integer doInBackground(String... params) {
             if(!NetworkHelper.isInternetAvailable(context)){
-                return "Internet not available";
+                //error
+                return 404;
             }
 
+            InputStream inputStream = null;
+
             try {
-                //then create an httpClient.
-                HttpClient client = new DefaultHttpClient();
-                HttpPost request = new HttpPost();
-                request.setURI(URI.create(context.getString(R.string.url_signup)));
+                URL url = new URL(context.getString(R.string.url_signup));
+                Log.d("Calling URL", url.toString());
+                HttpURLConnection conn = (HttpURLConnection) url.openConnection();
 
-                List<NameValuePair> pairs = new ArrayList<NameValuePair>();
-                pairs.add(new BasicNameValuePair("username", username.getText().toString()));
-                pairs.add(new BasicNameValuePair("pwd", pwd.getText().toString()));
-                //set entity
-                request.setEntity(new UrlEncodedFormEntity(pairs));
+                String urlParameters = "username="+params[0]+"&pwd="+params[1];
 
-                // do request.
-                HttpResponse httpResponse = client.execute(request);
-                String response = null;
 
-                //Store response
-                if (httpResponse.getEntity() != null) {
-                    response = EntityUtils.toString(httpResponse.getEntity());
+                conn.setReadTimeout(10000 /* milliseconds */);
+                conn.setConnectTimeout(15000 /* milliseconds */);
+                conn.setRequestMethod("POST");
+                conn.setDoInput(true);
+                conn.setDoOutput(true);
+                // Starts the query
+                // Send post request
+                conn.setDoOutput(true);
+                DataOutputStream wr = new DataOutputStream(conn.getOutputStream());
+                wr.writeBytes(urlParameters);
+                wr.flush();
+                wr.close();
+
+                return conn.getResponseCode();
+
+
+                // Makes sure that the InputStream is closed after the app is
+                // finished using it.
+            } catch (Exception e) {
+                Log.e("NetworkHelper", e.getMessage());
+                return null;
+            } finally {
+                if (inputStream != null) {
+                    try {
+                        inputStream.close();
+                    } catch (IOException e) {
+                        Log.e("NetworkHelper", e.getMessage());
+                    }
                 }
-                Log.d(Constants.TAG, "received for url: " + request.getURI() + " return code: " + httpResponse
-                        .getStatusLine()
-                        .getStatusCode());
-                if(httpResponse.getStatusLine().getStatusCode() != 200){
-                    //error happened
-                    return null;
-                }
-                return response;
-            } catch (Exception e){
-                Log.d(Constants.TAG, "Error occured in your AsyncTask : ", e);
-                return "an error occured";
             }
         }
 
         @Override
-        public void onPostExecute(final String token){
+        public void onPostExecute(final Integer response){
             loading(false);
-            if(token != null){
+            if(response == 200){
                 SignupActivity.this.finish();
             } else {
                 Toast.makeText(context, context.getString(R.string.error_signup), Toast.LENGTH_LONG).show();
